@@ -1,3 +1,7 @@
+2013-04-26  Richard Henderson  <rth@twiddle.net>
+
+	* mpn/arm/neon/logops_n.asm: New file.
+
 2013-04-25  Torbjorn Granlund  <tege@gmplib.org>
 
 	* mpn/arm/mod_34lsub1.asm: Clear carry smarter.
